Changes to the photo model, dynamic rendering of team page

--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -1,16 +1,26 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
-<h2>{{name}}</h2>
-<h3>{{title}}</h3>
-{{#if linkedin}}
-  <h4>{{linkedin}}</h4>
-{{/if}}
-{{#if website}}
-  <h4>{{website}}</h4>
-{{/if}}
-{{#if twitter}}
-  <h4>{{twitter}}</h4>
-{{/if}}
-{{#if instagram}}
-  <h4>{{instagram}}</h4>
-{{/if}}
+  
+  <h2>{{name.first}} {{name.last}}</h2>
+  <h3>{{title}}</h3>
+
+  {{#if linkedin}}
+    <h4>{{linkedin}}</h4>
+  {{/if}}
+
+  {{#if website}}
+    <h4>{{website}}</h4>
+  {{/if}}
+
+  {{#if twitter}}
+    <h4>{{twitter}}</h4>
+  {{/if}}
+
+  {{#if instagram}}
+    <h4>{{instagram}}</h4>
+  {{/if}}
+
+  {{#if photo}}
+    <img src={{photo}} alt={{name}}>
+  {{/if}}
+
 </div>
