fix issues with camp2016 and bios

--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -19,7 +19,7 @@
   {{/if}}
 
   {{#if photo}}
-    <img src={{photo}} alt={{name}}>
+    <img src={{photo}} alt={{name}} class="max-width">
   {{/if}}
 
 </div>
