--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -1,7 +1,10 @@
-<div class="col-xs-12 col-sm-6 col-md-6">
+<div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center;">
+  {{#if photo}}
+    <img src={{photo}} alt={{name}} class="max-width bio-image">
+  {{/if}}
   
-  <h3>{{name.first}} {{name.last}}</h3>
-  <h4>{{title}}</h4>
+  <h3>{{name.first}} {{name.last}}, {{title}}</h3>
+  <div>
   {{#if linkedin}}
     <a href={{linkedin}}><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
   {{/if}}
@@ -17,9 +20,6 @@
   {{#if instagram}}
     <a href={{instagram}}><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
   {{/if}}
-
-  {{#if photo}}
-    <img src={{photo}} alt={{name}} class="max-width">
-  {{/if}}
+  </div>
 
 </div>
