--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center;">
   {{#if photo}}
-    <img src={{photo}} alt={{name}} class="max-width bio-image">
+    <img src={{photo}} alt={{name}} class="max-width project-photo">
   {{/if}}
   
   <h3>{{name.first}} {{name.last}}, {{title}}</h3>
