fix bios and student spacing

--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center;">
+<div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center; margin-bottom: 20px;">
   {{#if photo}}
     <img src={{photo}} alt={{name}} class="max-width project-photo">
   {{/if}}
