--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -1,9 +1,9 @@
-<div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center; margin-bottom: 20px;">
+<div class="col-xs-12 col-sm-4 col-md-4" style="text-align: center; margin-bottom: 20px; padding: 0px 5px">
   {{#if photo}}
     <img src={{photo}} alt={{name}} class="team-photo">
   {{/if}}
   
-  <h3>{{name.first}} {{name.last}}, {{title}}</h3>
+  <h3 class="bio">{{name.first}} {{name.last}}, {{title}}</h3>
   <div>
   {{#if linkedin}}
     <a href={{linkedin}}><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
