Fix email and home icon

--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -10,7 +10,7 @@
   {{/if}}
 
   {{#if website}}
-    <a href={{website}}><i class="fa fa-code fa-2x" aria-hidden="true"></i></a>
+    <a href={{website}}><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
   {{/if}}
 
   {{#if twitter}}
