--- a/templates/views/partials/bio.hbs
+++ b/templates/views/partials/bio.hbs
@@ -3,7 +3,10 @@
     <img src={{photo}} alt={{name}} class="team-photo">
   {{/if}}
   
-  <h3 class="bio">{{name.first}} {{name.last}}, {{title}}</h3>
+  <h4 class="bio">{{name.first}} {{name.last}}</h4>
+ 
+  <h5 class="bio">{{title}}</h5>
+
   <div>
   {{#if linkedin}}
     <a href={{linkedin}}><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
